--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
     <string name="app_name">Reco</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="fragment_search_title_search">Search</string>
+    <string name="API_URL">http://10.10.13.36:8000/</string>
+    <string name="password_hint">****</string>
+    <string name="username_hint">demo</string>
 </resources>
