--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,9 @@
     <string name="app_name">Reco</string>
     <string name="fragment_search_title_search">Search</string>
     <string name="API_URL">http://10.10.13.36:8000/</string>
-    <string name="password_hint">****</string>
+    <string name="password_hint">******</string>
     <string name="username_hint">demo</string>
+    <string name="invalid_credentials">Invalid credentials.</string>
+    <string name="field_required">This field is required.</string>
+    <string name="passwords_dont_match">Passwords do not match.</string>
 </resources>
