--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,6 +19,6 @@
     <string name="delete_account_dialog_option_delete">DELETE</string>
     <string name="profile_updated_successfully">Profile updated successfully!</string>
     <string name="search_bar_hint">Search for music…</string>
-    <string name="similarity_placeholder">%1$d%%</string>
+    <string name="similarity_placeholder">Matched by %1$d%%</string>
     <string name="welcome_message_placeholder">Welcome back, %1$s</string>
 </resources>
