--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="profile_updated_successfully">Profile updated successfully!</string>
     <string name="search_bar_hint">Search for music…</string>
     <string name="similarity_placeholder">Matched by %1$d%%</string>
-    <string name="welcome_message_placeholder">Welcome back, %1$s</string>
+    <string name="welcome_message_placeholder">Welcome back, %1$s!</string>
     <string name="nav_menu_recommendations_item_title">Recomendations</string>
     <string name="nav_menu_library_item_title">Library</string>
     <string name="nav_menu_search_item_title">Search</string>
