--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,8 @@
     <string name="app_name">Reco</string>
     <string name="fragment_search_title_search">Search</string>
     <string name="API_URL">https://demo-reco-api.herokuapp.com</string>
-    <string name="username_hint">jhn_doe</string>
-    <string name="password_hint">******</string>
+    <string name="username_hint">demo</string>
+    <string name="password_hint">****</string>
     <string name="invalid_credentials">Invalid credentials.</string>
     <string name="field_required">This field is required.</string>
     <string name="passwords_do_not_match">Passwords do not match.</string>
@@ -19,7 +19,7 @@
     <string name="search_bar_hint">Search for music…</string>
     <string name="similarity_placeholder">Matched by %1$d%%</string>
     <string name="welcome_message_placeholder">Welcome back, %1$s!</string>
-    <string name="nav_menu_recommendations_item_title">Recomendations</string>
+    <string name="nav_menu_recommendations_item_title">Recommendations</string>
     <string name="nav_menu_library_item_title">Library</string>
     <string name="nav_menu_search_item_title">Search</string>
     <string name="nav_menu_home_item_title">Home</string>
